--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "specup",
-  "version": "0.0.2",
+  "version": "v0.0.1",
   "description": "Tool for bump version in package.json and RPM spec files",
   "main": "index.js",
   "scripts": {
