--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "specup",
-  "version": "v0.0.1",
+  "name": "spec",
+  "version": "v0.0.2",
   "description": "Tool for bump version in package.json and RPM spec files",
   "main": "index.js",
   "scripts": {
@@ -8,11 +8,13 @@
   },
   "author": "",
   "bin": {
-    "specup": "index.js"
+    "spec": "index.js"
   },
   "license": "GPL-3.0",
   "dependencies": {
+    "hogan.js": "^3.0.2",
     "nodegit": "^0.12.0",
+    "prompt": "^1.0.0",
     "semver": "^5.1.0",
     "yargs": "^4.3.2"
   }
