--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "license": "GPL-3.0",
   "dependencies": {
+    "async": "^2.0.1",
     "hogan.js": "^3.0.2",
     "nodegit": "^0.12.0",
     "prompt": "^1.0.0",
